# nocinsper

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/nocinsper/: __init__.py  nocinsper.py
tests/: test_nocinsper.py
