[tool.poetry]
name = "nocinsper"
version = "0.1.0"
description = "Baixa os dados do NOC do Insper"
authors = ["Julio Trecenti"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
bs4 = "^0.0.1"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
